--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
-  "name": "untranspiled-js-library-skeleton",
+  "name": "jscodeshift-choose-parser",
   "version": "0.0.0-development",
-  "description": "my skeleton for transpiler-free JS packages",
+  "description": "pick a jscodeshift parser intelligently based upon local project config",
   "main": "index.js",
   "author": "Andy Edwards",
   "license": "MIT",
+  "files": [
+    "package.json",
+    "yarn.lock",
+    "README.md",
+    "LICENSE.md",
+    "index.js",
+    "index.js.flow",
+    "index.d.ts"
+  ],
   "scripts": {
     "lint": "eslint *.js test --cache",
     "lint:fix": "eslint --fix *.js test --cache",
@@ -15,7 +24,7 @@
     "test:watch": "cross-env NODE_ENV=test mocha --watch $npm_package_config_mocha",
     "test:debug": "cross-env NODE_ENV=test mocha --inspect-brk $npm_package_config_mocha",
     "codecov": "nyc report --reporter=text-lcov > coverage.lcov; codecov",
-    "prepublishOnly": "npm run lint && npm test",
+    "prepublishOnly": "npm run lint && tsc && npm test",
     "open:coverage": "open coverage/lcov-report/index.html",
     "semantic-release": "semantic-release"
   },
@@ -58,26 +67,29 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jedwards1211/untranspiled-js-library-skeleton.git"
+    "url": "https://github.com/jedwards1211/jscodeshift-choose-parser.git"
   },
   "keywords": [
-    "skeleton"
+    "jcsodeshift"
   ],
   "bugs": {
-    "url": "https://github.com/jedwards1211/untranspiled-js-library-skeleton/issues"
+    "url": "https://github.com/jedwards1211/jscodeshift-choose-parser/issues"
   },
-  "homepage": "https://github.com/jedwards1211/untranspiled-js-library-skeleton#readme",
+  "homepage": "https://github.com/jedwards1211/jscodeshift-choose-parser#readme",
   "devDependencies": {
     "@commitlint/cli": "^6.0.2",
     "@commitlint/config-conventional": "^6.0.2",
     "@jedwards1211/commitlint-config": "^1.0.0",
     "@jedwards1211/eslint-config": "^2.0.0",
+    "@types/jscodeshift": "^0.6.3",
     "chai": "^4.1.2",
     "codecov": "^3.0.0",
     "cross-env": "^5.2.0",
     "eslint": "^4.16.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-watch": "^3.1.3",
+    "flow-bin": "^0.117.0",
+    "fs-extra": "^8.1.0",
     "husky": "^1.1.4",
     "istanbul": "^0.4.5",
     "lint-staged": "^8.0.4",
@@ -85,7 +97,8 @@
     "nyc": "^11.4.1",
     "prettier": "^1.15.1",
     "prettier-eslint": "^8.8.2",
-    "semantic-release": "^15.13.3"
+    "semantic-release": "^15.13.3",
+    "typescript": "^3.7.5"
   },
   "renovate": {
     "extends": [
@@ -104,5 +117,8 @@
     "major": {
       "automerge": false
     }
+  },
+  "dependencies": {
+    "resolve": "^1.15.0"
   }
 }
